--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -93,7 +93,7 @@ jobs:
       - name: Publish package
         uses: gradle/gradle-build-action@v2.4.2
         with:
-          arguments: publish
+          arguments: publish publishMavenJavaPublicationToMavenRepository
         env:
           SONATYPE_USERNAME: ${{ inputs.sonatypeUsername }}
           SONATYPE_PASSWORD: ${{ inputs.sonatypePassword }}
