--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -99,4 +99,23 @@ jobs:
           SONATYPE_PASSWORD: ${{ inputs.sonatypePassword }}
           ORG_GRADLE_PROJECT_signingKey: ${{ secrets.PLATFORM_ROBOT_GPG_PRIVATE_KEY }}
           ORG_GRADLE_PROJECT_signingPassword: ${{ secrets.PLATFORM_ROBOT_GPG_PASSPHRASE }}
+      - name: Update version after publish
+        run: | 
+          git config --local user.email "platforms-robot@codeforamerica.org"
+          git config --local user.name "CfA Platforms Robot"
+          git checkout main
+          git checkout -b "bump-snapshot-${{ inputs.version }}-SNAPSHOT"
+          sed -i 's/version = "\(.*\)"/version = "${{ inputs.version }}-SNAPSHOT"/' build.gradle
+          git add build.gradle
+          git commit -m "Updating version in build.gradle to ${{ inputs.version }}-SNAPSHOT"
+          git push origin/bump-snapshot-${{ inputs.version }}-SNAPSHOT
+          git checkout main 
+          git merge origin/bump-snapshot-${{ inputs.version }}-SNAPSHOT
+
+      - name: Publish GitHub Release
+        uses: softprops/action-gh-release@v1
+        with:
+          tag_name: ${{inputs.version}}
+          draft: false
+          prerelease: false
 
