--- a/build.gradle
+++ b/build.gradle
@@ -120,7 +120,6 @@ ext.admin = System.getenv("SONATYPE_USERNAME")
 publishing {
     publications {
         mavenJava(MavenPublication) {
-            evaluationDependsOn(signing)
             artifactId = "form-flow"
             from components.java
             versionMapping {
@@ -132,6 +131,13 @@ publishing {
                 }
             }
             pom {
+                signing {
+                    required { admin }
+                    def signingKey = System.getenv("GPG_SIGNING_KEY")
+                    def signingPassword = System.getenv("GPG_SIGNING_PASSPHRASE")
+                    useInMemoryPgpKeys(signingKey, signingPassword)
+                    sign publishing.publications
+                }
                 name = "Form Flow Builder"
                 description = "A Java library placed in a Spring Boot app to generate form flows."
                 url = "https://github.com/codeforamerica/form-flow/"
