Add spring session and jpa configuration
[#185408186]

Co-authored-by: Bethany Seeger <bseeger@codeforamerica.org>

--- a/src/test/resources/application-test.yaml
+++ b/src/test/resources/application-test.yaml
@@ -40,3 +40,8 @@ spring:
   jpa:
     hibernate:
       ddl-auto: create-drop
+  session:
+    store-type: jdbc
+    timeout: 72h
+    jdbc:
+      initialize-schema: always
