--- a/src/main/resources/application-form-flow-library.yaml
+++ b/src/main/resources/application-form-flow-library.yaml
@@ -5,3 +5,10 @@ spring:
   messages:
     encoding: ISO-8859-1
     basename: messages, messages-form-flow
+  session:
+    store-type: jdbc
+    timeout: 72h
+    jdbc:
+      initialize-schema: always
+  jpa:
+    open-in-view: false
