--- a/.github/workflows/pre-release.yml
+++ b/.github/workflows/pre-release.yml
@@ -6,17 +6,25 @@ on:
         description: 'Version to release'
         type: string
         required: true
+    ref_to_release:
+      description: 'Ref to release (branch, sha, tag, etc)'
+      type: string
+      required: true
+      default: 'main'
+
 jobs:
-#  run-tests:
-#    name: Run tests
-#    uses: ./.github/workflows/run-tests.yml
+  #  run-tests:
+  #    name: Run tests
+  #    uses: ./.github/workflows/run-tests.yml
   create-pre-release:
     name: Create Pre-Release
-#    needs: run-tests
+    #    needs: run-tests
     runs-on: ubuntu-latest
     steps:
       - name: Checkout
         uses: actions/checkout@v3
+        with:
+          ref: ${{ inputs.ref_to_release }}
       - name: Tag Version
         run: |
           echo Creating pre-release version: ${{inputs.version}}
