fix version and name of block

--- a/build.gradle
+++ b/build.gradle
@@ -8,7 +8,7 @@ plugins {
     id 'com.adarshr.test-logger' version '3.2.0'
     id 'jacoco'
     id 'signing'
-    id 'io.github.gradle-nexus.publish-plugin' version '1.3'
+    id 'io.github.gradle-nexus.publish-plugin' version '1.3.0'
 }
 
 jacoco {
@@ -222,7 +222,7 @@ signing {
 
 nexusPublishing {
     repositories {
-        myNexus {
+        sonatype {
             nexusUrl = uri("https://oss.sonatype.org/service/local/staging/deploy/maven2")
             snapshotRepositoryUrl = uri("https://oss.sonatype.org/content/repositories/snapshots")
             username = localEnv.getProperty("SONATYPE_USERNAME") ?: System.getenv("SONATYPE_USERNAME") // defaults to project.properties["myNexusUsername"]
