--- a/build.gradle
+++ b/build.gradle
@@ -8,6 +8,7 @@ plugins {
     id 'com.adarshr.test-logger' version '3.2.0'
     id 'jacoco'
     id 'signing'
+    id 'io.github.gradle-nexus.publish-plugin' version '1.3.0'
 }
 
 jacoco {
@@ -116,6 +117,11 @@ java {
     withSourcesJar()
 }
 
+ext.admin = System.getenv("SONATYPE_USERNAME")
+def sonatypeUsername = localEnv.getProperty("SONATYPE_USERNAME") ?: System.getenv("SONATYPE_USERNAME")
+def sonatypePassword = localEnv.getProperty("SONATYPE_PASSWORD") ?: System.getenv("SONATYPE_PASSWORD")
+
+
 publishing {
     publications {
         mavenJava(MavenPublication) {
@@ -184,7 +190,6 @@ publishing {
     }
 
     repositories {
-
         maven {
             name = "MavenCentral"
             // this url "https://s01.oss.sonatype.org/content/repositories/snapshots" is the NEW
@@ -199,18 +204,32 @@ publishing {
                 println("Creating a release version: ${version}")
                 url = "https://oss.sonatype.org/service/local/staging/deploy/maven2"
             }
-            credentials {
-                username = localEnv.getProperty("SONATYPE_USERNAME") ?: System.getenv("SONATYPE_USERNAME")
-                password = localEnv.getProperty("SONATYPE_PASSWORD") ?: System.getenv("SONATYPE_PASSWORD")
+            if (admin) {
+                credentials {
+                    username = sonatypeUsername
+                    password = sonatypePassword
+                }
             }
         }
     }
 }
 
 signing {
-    if (!version.endsWith("-SNAPSHOT")) {
-        useGpgCmd()
-        sign publishing.publications.mavenJava
+    required { admin }
+    def signingKey = System.getenv("GPG_SIGNING_KEY")
+    def signingPassword = System.getenv("GPG_SIGNING_PASSPHRASE")
+    useInMemoryPgpKeys(signingKey, signingPassword)
+    sign publishing.publications
+}
+
+nexusPublishing {
+    repositories {
+        sonatype {
+            nexusUrl = uri("https://oss.sonatype.org/service/local/staging/deploy/maven2")
+            snapshotRepositoryUrl = uri("https://oss.sonatype.org/content/repositories/snapshots")
+            username = sonatypeUsername
+            password = sonatypePassword
+        }
     }
 }
 
