--- a/build.gradle
+++ b/build.gradle
@@ -223,7 +223,7 @@ signing {
 nexusPublishing {
     repositories {
         sonatype {
-            nexusUrl = uri("https://oss.sonatype.org/service/local/staging/deploy/maven2/")
+            nexusUrl = uri("https://oss.sonatype.org/service/local/")
             snapshotRepositoryUrl = uri("https://oss.sonatype.org/content/repositories/snapshots/")
             username = localEnv.getProperty("SONATYPE_USERNAME") ?: System.getenv("SONATYPE_USERNAME") // defaults to project.properties["myNexusUsername"]
             password = localEnv.getProperty("SONATYPE_PASSWORD") ?: System.getenv("SONATYPE_PASSWORD") // defaults to project.properties["myNexusPassword"]
