Add workflow_dispatch to test snapshot publish fixes
[#185136763]

--- a/.github/workflows/gradle-publish.yml
+++ b/.github/workflows/gradle-publish.yml
@@ -9,9 +9,10 @@ name: Publish Package to Github & Maven Central
 
 on:
   workflow_run:
-    workflows: ["Run tests"]
-    types: [completed]
-    branches: [main]
+    workflows: [ "Run tests" ]
+    types: [ completed ]
+    branches: [ main ]
+  workflow_dispatch:
 
 jobs:
   build:
