--- a/.github/workflows/publish-snapshot.yml
+++ b/.github/workflows/publish-snapshot.yml
@@ -45,7 +45,7 @@ jobs:
         with:
           repository: codeforamerica/form-flow-starter-app
           event-type: form-flow-snapshot-updated
-          token: ${{ secrets.PLATFORM_ROBOT_PAT }}
+          token: ${{ secrets.STARTER_APP_GITHUB_PAT }}
       - name: Announce on Slack
         if: failure()
         uses: ravsamhq/notify-slack-action@v2
