Attempt to fix publish url

--- a/build.gradle
+++ b/build.gradle
@@ -203,7 +203,7 @@ nexusPublishing {
             } else {
                 println("Creating a release version: ${version}")
             }
-            nexusUrl = uri("https://oss.sonatype.org/service/local/staging/deploy/maven2")
+            nexusUrl = uri("https://oss.sonatype.org/service/local/")
             snapshotRepositoryUrl = uri("https://oss.sonatype.org/content/repositories/snapshots")
             username = sonatypeUsername
             password = sonatypePassword
