Less confusing message when running gradle on snapshots/releases
- The println under nexusPublishing -> repositories -> sonatype runs even when you're running tests 🤔 changed it so nobody accidentally assuming they're publishing someting.

--- a/build.gradle
+++ b/build.gradle
@@ -206,9 +206,9 @@ nexusPublishing {
     repositories {
         sonatype {
             if (version.endsWith("-SNAPSHOT")) {
-                println("Creating a SNAPSHOT: ${version}")
+                println("Using a SNAPSHOT: ${version}")
             } else {
-                println("Creating a release version: ${version}")
+                println("Using a release version: ${version}")
             }
             nexusUrl = uri("https://oss.sonatype.org/service/local/")
             snapshotRepositoryUrl = uri("https://oss.sonatype.org/content/repositories/snapshots")
