--- a/src/test/resources/flows-config/test-flow.yaml
+++ b/src/test/resources/flows-config/test-flow.yaml
@@ -21,6 +21,10 @@ flow:
   subflowAddItem:
     subflow: testSubflow
     nextScreens:
+      - name: subflowAddItemPage2
+  subflowAddItemPage2:
+    subflow: testSubflow
+    nextScreens:
       - name: test
   test:
     nextScreens:
