Adds second test for an inner page of a subflow (one with a UUID)

--- a/src/test/resources/flows-config/test-flow.yaml
+++ b/src/test/resources/flows-config/test-flow.yaml
@@ -46,6 +46,6 @@ flow:
 subflows:
   testSubflow:
     entryScreen: testEntryScreen
-    iterationStartScreen: testIterationStartScreen
+    iterationStartScreen: subflowAddItem
     reviewScreen: testReviewScreen
     deleteConfirmationScreen: testDeleteConfirmationScreen
