--- a/build.gradle
+++ b/build.gradle
@@ -1,7 +1,7 @@
 plugins {
     // Apply the java-library plugin for API and implementation separation.
     id 'org.springframework.boot' version '3.1.1'
-    id 'io.spring.dependency-management' version '1.1.1'
+    id 'io.spring.dependency-management' version '1.1.2'
     id 'java-library'
     id 'maven-publish'
     id 'java'
@@ -60,6 +60,7 @@ dependencies {
     // This dependency is used internally, and not exposed to consumers on their own compile classpath.
     api 'org.springframework.boot:spring-boot-starter-thymeleaf'
 
+    implementation 'com.google.guava:guava:32.1.1-jre'
     implementation 'org.springframework.boot:spring-boot-starter-web'
     implementation 'org.springframework.boot:spring-boot-starter-validation'
     implementation 'org.springframework.boot:spring-boot-starter-security'
