--- a/.github/workflows/run-tests.yml
+++ b/.github/workflows/run-tests.yml
@@ -9,7 +9,7 @@ on:
 jobs:
   test:
     name: Run tests
-    runs-on: ubuntu-latest:20230710.1.0
+    runs-on: ubuntu-latest
 
     permissions:
       actions: read
