--- a/build.gradle
+++ b/build.gradle
@@ -29,6 +29,7 @@ def sonatypeUsername = localEnv.getProperty("SONATYPE_USERNAME") ?: System.geten
 def sonatypePassword = localEnv.getProperty("SONATYPE_PASSWORD") ?: System.getenv("SONATYPE_PASSWORD")
 
 jar {
+    delete "build", "/libs/", "*.jar"
     manifest {
         attributes "Main-Class": "formflow.library.ScreenController"
     }
