--- a/src/test/resources/application-test.yaml
+++ b/src/test/resources/application-test.yaml
@@ -7,6 +7,9 @@ form-flow:
     max-file-size: '17'
     thumbnail-width: '100'
     thumbnail-height: '50'
+    virus-scanning:
+      enabled: true
+      clammit-url: 'https://app-58915.on-aptible.com/clammit/'
   address-validation:
     smarty:
       auth-id: "authId"
