--- a/src/test/resources/application-test.yaml
+++ b/src/test/resources/application-test.yaml
@@ -10,6 +10,7 @@ form-flow:
     virus-scanning:
       enabled: true
       clammit-url: 'https://app-58915.on-aptible.com/clammit/'
+      block-if-unreachable: false
   address-validation:
     smarty:
       auth-id: "authId"
