--- a/build.gradle
+++ b/build.gradle
@@ -110,6 +110,7 @@ dependencies {
     testImplementation 'org.seleniumhq.selenium:selenium-java'
     testImplementation 'org.postgresql:postgresql'
     testImplementation 'org.projectlombok:lombok:1.18.28'
+    testImplementation 'com.squareup.okhttp3:mockwebserver:4.11.0'
 }
 
 test {
