--- a/src/test/resources/application-test.yaml
+++ b/src/test/resources/application-test.yaml
@@ -9,7 +9,7 @@ form-flow:
     thumbnail-height: '50'
     virus-scanning:
       enabled: true
-      clammit-url: 'https://app-58915.on-aptible.com/clammit/scan'
+      service-url: 'https://app-58915.on-aptible.com/clammit/scan'
       timeout: 20000
   address-validation:
     smarty:
