Scan for viruses on uploaded files (#359)
- Defaults to off if not configured
- Add virus_scanned column to user file

[#185770088]

Co-authored-by: spokenbird <agonzalez@codeforamerica.org>
Co-authored-by: Cypress Borg <cborg@codeforamerica.org>
Co-authored-by: Ben Calegari <bcalegari@codeforamerica.org>
Co-authored-by: Bethany Seeger <bseeger@codeforamerica.org>

--- a/src/test/resources/application-test.yaml
+++ b/src/test/resources/application-test.yaml
@@ -7,6 +7,10 @@ form-flow:
     max-file-size: '17'
     thumbnail-width: '100'
     thumbnail-height: '50'
+    virus-scanning:
+      enabled: true
+      service-url: 'https://app-58915.on-aptible.com/clammit/scan'
+      timeout: 20000
   address-validation:
     smarty:
       auth-id: "authId"
