--- a/build.gradle
+++ b/build.gradle
@@ -66,11 +66,12 @@ dependencies {
 
     // This dependency is used internally, and not exposed to consumers on their own compile classpath.
     api 'org.springframework.boot:spring-boot-starter-thymeleaf'
-
+    implementation 'org.springframework.integration:spring-integration-ws:6.1.2'
     implementation 'com.google.guava:guava:32.1.2-jre'
     implementation 'org.springframework.boot:spring-boot-starter-web'
     implementation 'org.springframework.boot:spring-boot-starter-validation'
     implementation 'org.springframework.boot:spring-boot-starter-security'
+    implementation 'org.springframework.boot:spring-boot-starter-webflux'
     implementation 'org.jetbrains:annotations:24.0.1'
     implementation 'io.hypersistence:hypersistence-utils-hibernate-60:3.5.2'
     implementation 'javax.persistence:javax.persistence-api:2.2'
@@ -85,6 +86,8 @@ dependencies {
     implementation 'com.google.crypto.tink:tink:1.10.0'
     implementation 'org.springframework.session:spring-session-jdbc'
 
+    // For M1 issue? 
+    //runtimeOnly 'io.netty:netty-resolver-dns-native-macos:4.1.97.Final:osx-aarch_64'
     compileOnly 'org.projectlombok:lombok'
 
     annotationProcessor 'org.projectlombok:lombok'
@@ -107,6 +110,7 @@ dependencies {
     testImplementation 'org.seleniumhq.selenium:selenium-java'
     testImplementation 'org.postgresql:postgresql'
     testImplementation 'org.projectlombok:lombok:1.18.28'
+    testImplementation 'com.squareup.okhttp3:mockwebserver:4.11.0'
 }
 
 test {
