--- a/build.gradle
+++ b/build.gradle
@@ -9,6 +9,7 @@ plugins {
     id 'jacoco'
     id 'signing'
     id 'io.github.gradle-nexus.publish-plugin' version '1.3.0'
+    id "org.flywaydb.flyway" version "9.22.1"
 }
 
 jacoco {
@@ -84,7 +85,7 @@ dependencies {
     implementation 'com.google.crypto.tink:tink:1.11.0'
     implementation 'org.springframework.session:spring-session-jdbc'
 
-    // For M1 issue? 
+    // For M1 issue?
     //runtimeOnly 'io.netty:netty-resolver-dns-native-macos:4.1.97.Final:osx-aarch_64'
     compileOnly 'org.projectlombok:lombok'
 
