Allow javadoc to emit up to a 1000 warnings

--- a/build.gradle
+++ b/build.gradle
@@ -226,8 +226,6 @@ nexusPublishing {
     }
 }
 
-// javadoc {
-//    if (JavaVersion.current().isJava9Compatible()) {
-//         options.addBooleanOption('html5', true)
-//     }
-// }
+ javadoc {
+     options.addStringOption('Xmaxwarns', '1000')
+ }
