Enable creation of Javadoc jar with builds

--- a/build.gradle
+++ b/build.gradle
@@ -125,7 +125,7 @@ jacocoTestReport {
 
 java {
     // we need to fix javadoc work before this will run successfully
-    //withJavadocJar()
+    withJavadocJar()
     withSourcesJar()
 }
 
