Updates `iterationIsComplete` status (#410)
Fix setting `iterationIsComplete` when last subflow screen is a GET
- Add `iterationId` as an optional request parameter to the navigation endpoint
- Use navigation endpoint logic for both GET and POST calls within a subflow
- Don't destroy incomplete subflows 
- Don't set the iterationIsComplete flag back to false
- Clean up AbstractMockMvcTest to remove/consolidate unused methods 

---------

Co-authored-by: spokenbird <agonzalez@codeforamerica.org>
Co-authored-by: Martha Pidcock <mpidcock@codeforamerica.org>

--- a/src/test/resources/flows-config/test-flow.yaml
+++ b/src/test/resources/flows-config/test-flow.yaml
@@ -42,7 +42,7 @@ flow:
     nextScreens:
       - name: success
   success:
-    nextScreens:
+    nextScreens: null
 subflows:
   testSubflow:
     entryScreen: testEntryScreen
@@ -68,6 +68,58 @@ flow:
       - name: success
 subflows:
   testSubflow:
+    entryScreen: testEntryScreen
+    iterationStartScreen: subflowAddItem
+    reviewScreen: testReviewScreen
+    deleteConfirmationScreen: testDeleteConfirmationScreen
+---
+name: testSubflowLogic
+flow:
+  testEntryScreen:
+    nextScreens:
+      - name: subflowAddItem
+  subflowAddItem:
+    subflow: subflowWithGetAtEnd
+    nextScreens:
+      - name: getScreen
+  getScreen:
+    subflow: subflowWithGetAtEnd
+    nextScreens:
+      - name: otherGetScreen
+  otherGetScreen:
+    subflow: subflowWithGetAtEnd
+    nextScreens:
+      - name: testReviewScreen
+  testReviewScreen:
+    nextScreens: null
+subflows:
+  subflowWithGetAtEnd:
+    entryScreen: testEntryScreen
+    iterationStartScreen: subflowAddItem
+    reviewScreen: testReviewScreen
+    deleteConfirmationScreen: testDeleteConfirmationScreen
+---
+name: yetAnotherTestFlow
+flow:
+  testEntryScreen:
+    nextScreens:
+      - name: subflowAddItem
+  subflowAddItem:
+    subflow: subflowWithAGetAndThenAPost
+    nextScreens:
+      - name: getScreen
+  getScreen:
+    subflow: subflowWithAGetAndThenAPost
+    nextScreens:
+      - name: subflowAddItemPage2
+  subflowAddItemPage2:
+    subflow: subflowWithAGetAndThenAPost
+    nextScreens:
+      - name: testReviewScreen
+  testReviewScreen:
+    nextScreens: null
+subflows:
+  subflowWithAGetAndThenAPost:
     entryScreen: testEntryScreen
     iterationStartScreen: subflowAddItem
     reviewScreen: testReviewScreen
