--- a/src/test/resources/application-test.yaml
+++ b/src/test/resources/application-test.yaml
@@ -40,6 +40,7 @@ spring:
     clean-on-validation-error: true
     placeholders:
       uuid_function: "gen_random_uuid"
+      user_file_doc_type_default: "NotSet"
     clean-disabled: false
   messages:
     encoding: ISO-8859-1
